--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "@j-m-l/simple-mongo-express-endpoints",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Library to ease the prototyping of a backend",
   "main": "src/index.js",
   "scripts": {
     "test.unit": "jest -c tests/jest.config.unit.js --verbose",
     "test.integration": "jest -c tests/jest.config.integration.js --runInBand --verbose",
     "test": "npm run test.unit && npm run test.integration"
+  },
+  "homepage": "https://github.com/J-M-L/simple-mongo-express-endpoints",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/J-M-L/simple-mongo-express-endpoints"
   },
   "author": "j-m-l",
   "license": "ISC",
